integ-tests/tests/snapshots/parser__stray_cr__single.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ single:1:1
  │
1 │ 
  │ ^ unexpected character '\r'


